Add customer, menu, employee controller
